@@ -21,6 +21,8 @@ void V2Reforms::init(EU3Country* srcCountry)
 	health_care						= 0;
 	governmentEffects(srcCountry);
 	sliderEffects(srcCountry);
+	flagEffects(srcCountry);
+	modifierEffects(srcCountry);
 }
 
 
@@ -537,6 +539,58 @@ void V2Reforms::sliderEffects(EU3Country* srcCountry)
 	unemployment_subsidies		+= quality_quantity * 0;
 	pensions							+= quality_quantity * 0;
 	health_care						+= quality_quantity * 0;
+}
+
+
+void V2Reforms::flagEffects(EU3Country* srcCountry)
+{
+	vector<string> flags = srcCountry->getFlags();
+	for(size_t i = 0; i < flags.size(); i++)
+	{
+		if (flags[i] == "")
+		{
+			slavery							+= 0;
+			vote_franchise					+= 0;
+			upper_house_composition		+= 0;
+			voting_system					+= 0;
+			public_meetings				+= 0;
+			press_rights					+= 0;
+			trade_unions					+= 0;
+			political_parties				+= 0;
+			wage_reforms					+= 0;
+			work_hours						+= 0;
+			safety_regulations			+= 0;
+			unemployment_subsidies		+= 0;
+			pensions							+= 0;
+			health_care						+= 0;
+		}
+	}
+}
+
+
+void V2Reforms::modifierEffects(EU3Country* srcCountry)
+{
+	vector<string> modifiers = srcCountry->getModifiers();
+	for(size_t i = 0; i < modifiers.size(); i++)
+	{
+		if (modifiers[i] == "\"the_abolish_slavery_act\"")
+		{
+			slavery							+= 1;
+			vote_franchise					+= 0;
+			upper_house_composition		+= 0;
+			voting_system					+= 0;
+			public_meetings				+= 0;
+			press_rights					+= 0;
+			trade_unions					+= 0;
+			political_parties				+= 0;
+			wage_reforms					+= 0;
+			work_hours						+= 0;
+			safety_regulations			+= 0;
+			unemployment_subsidies		+= 0;
+			pensions							+= 0;
+			health_care						+= 0;
+		}
+	}
 }
 
 
